Reclaim disk on delete even when root-owned files remain; refresh README
handleDeleteServer: a failed Steam install can leave root/steam-owned
files the panel user can't remove, so os.RemoveAll fails and deleted
servers still leave multi-GB data dirs behind (the VM disk hit 100% even
after deleting every server). Fall back to a root ephemeral container
that empties the data dir, then remove the now-empty dir.

README: bring the feature list up to date with v0.2.x work — automatic
port forwarding (UPnP + UniFi OS), per-server connect address, update
banner, live starting->running status, disk reclaim on delete, and
community runes.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>